# bigecyhmm

./: CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: mirror_to_gitlab.yml  python-package.yml  python-publish.yml
bigecyhmm/: __init__.py  __main__.py  combine_plots.py  custom_db.py  custom_tsv_parser.py  data_stats.py  diagram_cycles.py  donut_plot.py  group_analysis.py  group_plot.py  hmm_search.py  run_hmm.py  statnut_runner.py  table_plot.py  utils.py  visualisation.py
bigecyhmm/hmm_databases/: README.md  R_diagram_pathways.tsv  custom_carbon_cycle.json  custom_hydrogen_central_cycles.tsv  custom_nitrogen_cycle.json  custom_other_cycle.json  custom_phosphorus_cycle.json  custom_sulfur_cycle.json  cycle_genes_phosphorus.tsv  cycle_pathways.tsv  hmm_table_template.tsv  hydrogen_consumption.tsv  hydrogen_consumption_v2.tsv  hydrogenotrophic_salt_caverns.json
bigecyhmm/hmm_databases/hmm_files/: K00001.hmm  K00002.hmm  K00016.hmm  K00114.hmm  K00117.hmm  K00123.hmm  K00124.hmm  K00125.hmm  K00129.hmm  K00138.hmm  K00169.hmm  K00194.hmm  K00197.hmm  K00198.hmm  K00241.hmm  K00242.hmm  K00249.hmm  K00255.hmm  K00330.hmm  K00331.hmm  K00332.hmm  K00380.hmm  K00390.hmm  K00394.hmm  (+221 more)
bigecyhmm/templates/: template_central_hydrogen.graphml
example/: create_bigecyhmm_plot.py
nextflow/: README.md  workflow.nf
scripts/: README.md  create_hmm.py  create_html_visualisation_pyvis.py  draw_biogeochemical_cycles.R  test_HtxA.fasta  test_HtxB.fasta  test_ptxB.fasta
test/: test_custom_db.py  test_database.py  test_diagram_cycles.py  test_hmm_search.py  test_utils.py  test_visualisation.py
test/input_data/: meta_organism_test.faa  meta_organism_test.fasta  motif_pair_mod.json  test_abundance.tsv  test_measure.tsv
tests/: test_custom_db.py  test_database.py  test_group_stats.py  test_hmm_search.py  test_visualisation.py  test_visualisation_minimal.py
tests/input_data/: abundance_file_from_genomes.tsv  group_sample.tsv  ko_file.tsv  missing_proteome_tax_id_abundance.tsv  motif.json  motif_pair.json  proteome_tax_id_abundance.tsv  proteome_tax_id_abundance_incorrect.tsv
(+28 files in other folders)
